# SustainAI

./: .env.example  .gitignore  Makefile  README.md  build.ps1  download_data.py  generate_docs.py  generate_report.py  pyproject.toml  verify_data.py
configs/: default.yaml
deploy/terraform/: main.tf
docker/: Dockerfile
docs/: SustainAI_BRD_v0.1.md  SustainAI_SDD_v0.1.md  SustainAI_TRD_v0.1.md  build_report.md  decisions.md  deviations.md
models/: model_meta.json  selection_report.json  threshold_report.json
outputs_evidence/: false_alarms.json  latency.json  metrics.json  misses.json  per_engine.json
src/sustainai/: __init__.py  api.py  config.py  exceptions.py  features.py  ingest.py  predict.py  reports.py  schemas.py  train.py
src/sustainai/agent/: __init__.py  guardrails.py  prompts.py  stub.py  tools.py  triage_agent.py
src/sustainai/harness/: __init__.py  evaluate.py  metrics.py
tests/: __init__.py  test_agent.py  test_api.py  test_exceptions.py  test_features.py  test_harness.py  test_ingest.py  test_lazy_import.py  test_metrics.py  test_train.py
